# VZOR-cv

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yaml
.github/workflows/: codeql.yaml  linter.yaml
src/: __main__.py  app.py  conf.py  utils.py
src/flask/: __main__.py  send-form.html
src/flask/templates/: index.html
src/grpc/: __init__.py  client.py  image.proto  image_pb2.py  image_pb2_grpc.py  server.py  test_client.py
src/logger/: __init__.py  _setup_logger.py
src/models/: data_models.py
src/services/: image_analysis.py  image_description.py  object_detection.py  text_detection.py
src/tasks/: __init__.py  _model.py
src/tasks/captioning/: __init__.py  blip_image_captioning.py
src/tasks/classifying/: __init__.py  yolo.py
src/tasks/describing/: __init__.py  blip_captioning_image.py
src/tasks/ocr/: __init__.py  easyocr_.py
