[project]
name = "VZOR-cv"
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.37.2",
    "pillow>=10.2.0",
    "numpy>=1.26.4",
    "deep-translator>=1.11.4",
    "pydantic>=2.6.1",
    "timm>=1.0.15",
    "surya-ocr>=0.13.0",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
